--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,7 +1,7 @@
 title: Grav
 author:
-  name: Joe Bloggs
-  email: 'joe@test.com'
+  name: Appyfriends
+  email: 'etienne.valette@gmail.com'
 metadata:
     description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
-
+taxonomies: [region]
