social networks added

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -5,3 +5,7 @@ author:
 metadata:
     description: 'A curated directory of sharing economy resources to make & save money'
 taxonomies: [region]
+owner:
+    facebook: CaptainShare
+    twitter: CaptainShare
+    google_plus: https://plus.google.com/113591471491719021812
