--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -19,7 +19,7 @@ cache:
 
 twig:
   cache: true
-  debug: true
+  debug: false
   auto_reload: true
   autoescape: false
 
@@ -36,6 +36,6 @@ errors:
 
 debugger:
   enabled: false
-  twig: true
+  twig: false
   shutdown:
     close_connection: true
